changed getLast to to levels.size() - 1 in LevelHandler changed getFirst to get(0) in mainMenuPage